[package]
name = "concord-client"
version = "0.0.1"
edition = "2021"
authors = ["Ivan Bodrov <ibodrov@gmail.com>"]
license = "Apache-2.0"
description = "A client library for walmartlabs/concord written in async Rust"

[dependencies]
futures = "0"
futures-util = "0"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["net", "rt", "time", "sync"] }
tokio-tungstenite = "0"
uuid = { version = "1", features = ["serde"] }
