[package]
name = "concord-client"
version = "0.0.9"
edition = "2024"
authors = ["Ivan Bodrov <ibodrov@gmail.com>"]
license = "Apache-2.0"
description = "A client library for walmartlabs/concord written in async Rust"

[dependencies]
bytes = "1"
futures = "0"
futures-util = "0"
http = "1"
reqwest = { version = "0", features = ["json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0", features = ["serde-well-known"] }
tokio = { version = "1", features = ["net", "rt", "time", "sync", "macros"] }
tokio-tungstenite = "0"
tokio-util = { version = "0" }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["serde"] }

[features]
default = ["api-client", "queue-client"]
api-client = []
queue-client = []
